New url structure - image urls is in path. * Updated swagger docs
